added divs for screamer images

--- a/home.html
+++ b/home.html
@@ -7,38 +7,38 @@
 
     <title>katherine imogene hayden</title>
 
-<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
-<link rel="stylesheet" href="pure-marketing.css">
-<link rel="stylesheet" href="kih.css">
+    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
+    <link rel="stylesheet" href="pure-marketing.css">
+    <link rel="stylesheet" href="kih.css">
 
-<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
 </head>
 <body>
 
 
-<div class="splash-container">
-    <div class="splash">
-        <h1 class="splash-head">katherine imogene hayden</h1>
-        <p class="splash-subhead">
-            creative. clever. web developer.
-        </p>
-        <ul>
-            <li><a href="https://github.com/katherineimogene" target='_blank'><i i class='fa fa-github fa-2x'></i></a></li>
-            <li><a href="https://www.linkedin.com/in/katherineimogene" target='_blank'><i i class='fa fa-linkedin fa-2x'></i></a></li>
-            <li><a href="http://katherineimogene.tumblr.com" target='_blank'><i i class='fa fa-tumblr fa-2x'></i></a></li>
-            <li><a href="http://instagram.com/katherineimogene" target='_blank'><i i class='fa fa-instagram fa-2x'></i></a></li>
-            <li><a href="https://www.facebook.com/katherine.hayden.528" target='_blank'><i i class='fa fa-facebook fa-2x'></i></a></li>
-            <li><a href="https://plus.google.com/+KatherineHayden0803" target='_blank'><i i class='fa fa-google-plus fa-2x'></i></a></li>
-            <li><a href="http://twitter.com/kihayden" target='_blank'><i i class='fa fa-twitter fa-2x'></i></a></li>
-            <li><a href="mailto:katherineimogene@gmail.com?subject=toujours gai"><i i class='fa fa-envelope fa-2x'></i></a></li>
-        </ul>
+    <div class="splash-container">
+        <div class="splash">
+            <h1 class="splash-head">katherine imogene hayden</h1>
+            <p class="splash-subhead">
+                creative. clever. web developer.
+            </p>
+            <ul>
+                <li><a href="https://github.com/katherineimogene" target='_blank'><i i class='fa fa-github fa-2x'></i></a></li>
+                <li><a href="https://www.linkedin.com/in/katherineimogene" target='_blank'><i i class='fa fa-linkedin fa-2x'></i></a></li>
+                <li><a href="http://katherineimogene.tumblr.com" target='_blank'><i i class='fa fa-tumblr fa-2x'></i></a></li>
+                <li><a href="http://instagram.com/katherineimogene" target='_blank'><i i class='fa fa-instagram fa-2x'></i></a></li>
+                <li><a href="https://www.facebook.com/katherine.hayden.528" target='_blank'><i i class='fa fa-facebook fa-2x'></i></a></li>
+                <li><a href="https://plus.google.com/+KatherineHayden0803" target='_blank'><i i class='fa fa-google-plus fa-2x'></i></a></li>
+                <li><a href="http://twitter.com/kihayden" target='_blank'><i i class='fa fa-twitter fa-2x'></i></a></li>
+                <li><a href="mailto:katherineimogene@gmail.com?subject=toujours gai"><i i class='fa fa-envelope fa-2x'></i></a></li>
+            </ul>
+        </div>
     </div>
-</div>
 
-<div class="content-wrapper">
+    <div class="content-wrapper">
 
- <div class="content">
+       <div class="content">
         <h2 class="content-head is-center">explorations in JavaScript</h2>
 
         <div class="pure-g">
@@ -64,65 +64,97 @@
                     Mehitabel Racer
                 </h3>
                 <p>
-                   'Typeracer' in vanilla JavaScript.
-                </p>
-            </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <h3 class="content-subhead">
-                    That's a nice drag-n-drop
-                </h3>
-                <p>
-                   Exercise: implementing a drag and drop.
-                </p>
-            </div>
+                 'Typeracer' in vanilla JavaScript.
+             </p>
+         </div>
+         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
+            <h3 class="content-subhead">
+                That's a nice drag-n-drop
+            </h3>
+            <p>
+             Exercise: implementing a drag and drop.
+         </p>
+     </div>
+ </div>
+</div>
+
+<div class="content ribbon">
+    <h2 class="content-head is-center">federal reserve board of governors</h2>
+
+    <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+
+            <h3 class="content-subhead">
+                Project Manager
+            </h3>
+            <p>
+                Economist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom Shakalakakaa
+            </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+            <h3 class="content-subhead">
+                Rails Developer
+            </h3>
+            <p>
+                Example, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for Papers
+            </p>
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+            <h3 class="content-subhead">
+                Economic Research and Policy Support
+            </h3>
+            <p>
+                Household and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate Finance
+            </p>
+        </div>
+
+    </div>
+</div>
+
+
+
+<div class="content">
+    <h2 class="content-head is-center">Screamers</h2>
+
+    <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+            one
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+            two
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
+            three
         </div>
     </div>
 
-    <div class="content ribbon">
-        <h2 class="content-head is-center">federal reserve board of governors</h2>
+    <div class="pure-g">
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            one
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            two
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            three
+        </div>
 
-        <div class="pure-g">
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-
-                <h3 class="content-subhead">
-                    Project Manager
-                </h3>
-                <p>
-                    Economist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom Shakalakakaa
-                </p>
-            </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-                <h3 class="content-subhead">
-                    Rails Developer
-                </h3>
-                <p>
-                    Example, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for Papers
-                </p>
-            </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-                <h3 class="content-subhead">
-                    Economic Research and Policy Support
-                </h3>
-                <p>
-                    Household and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate Finance
-                </p>
-            </div>
-
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            four
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            five
+        </div>
+        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+            six
         </div>
     </div>
 
+</div>
 
-
-    <div class="content">
-        <h2 class="content-head is-center">Screamers</h2>
-
-
-
-    </div>
-
-    <div class="footer l-box is-center">
-        i'd love to hear from you.
-    </div>
+<div class="footer l-box is-center">
+    i'd love to hear from you.
+</div>
 
 </div>
 
