Includes screamer images

--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
 
     <div class="content-wrapper">
 
-       <div class="content">
+     <div class="content">
         <h2 class="content-head is-center">explorations in JavaScript</h2>
 
         <div class="pure-g">
@@ -64,18 +64,18 @@
                     Mehitabel Racer
                 </h3>
                 <p>
-                 'Typeracer' in vanilla JavaScript.
-             </p>
-         </div>
-         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
+                   'Typeracer' in vanilla JavaScript.
+               </p>
+           </div>
+           <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
             <h3 class="content-subhead">
                 That's a nice drag-n-drop
             </h3>
             <p>
-             Exercise: implementing a drag and drop.
-         </p>
-     </div>
- </div>
+               Exercise: implementing a drag and drop.
+           </p>
+       </div>
+   </div>
 </div>
 
 <div class="content ribbon">
@@ -116,39 +116,38 @@
 <div class="content">
     <h2 class="content-head is-center">Screamers</h2>
 
-    <div class="pure-g">
+    <div class="pure-g screamer-strip">
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            one
+            <img class="showcase" src="img/fence_fairy.jpg">
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            two
+            <img class="showcase" src="img/birds_eye_view.jpg">
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            three
+            <img class="showcase" src="img/angler_fish.jpg">
         </div>
     </div>
 
-    <div class="pure-g">
+    <div class="pure-g screamer-strip">
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            one
+            <img class="close-up" src="img/eye_closeup.jpg" alt="dragon eye closeup">
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            two
+            <img class="close-up"  src="img/scale_closeup.jpg" alt="dragon scale closeup">
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            three
-        </div>
-
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            four
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            five
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            six
-        </div>
+           <img class="close-up"  src="img/tail_closeup.jpg" alt="dragon tail closeup">
+       </div>
+       <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+           <img class="close-up"  src="img/arm_closeup.jpg" alt="dragon arm closeup">
+       </div>
+       <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+          <img class="close-up"  src="img/backside_closeup.jpg" alt="dragon backside closeup">
+      </div>
+      <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
+        <img class="close-up"  src="img/foot_closeup.jpg" alt="dragon foot closeup">
     </div>
+</div>
 
 </div>
 
@@ -160,3 +159,6 @@
 
 </body>
 </html>
+
+
+
