--- a/home.html
+++ b/home.html
@@ -114,7 +114,8 @@
 
 
 <div class="content">
-    <h2 class="content-head is-center">Screamers</h2>
+    <h2 class="screamer content-head is-center">Screamers</h2>
+    <p>I started making these clothe mache creatures in high school, and they continue to be one of my silliest and most rewarding hobbies. I start with newspaper, masking tape, and vague idea of what I'd like to create. These are figures of my imagination, and I love the freedom that this brings. Also monsters are funny. </p>
 
     <div class="pure-g screamer-strip">
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
