--- a/home.html
+++ b/home.html
@@ -39,7 +39,7 @@
     <div class="content-wrapper">
 
      <div class="content">
-        <h2 class="content-head is-center">explorations in JavaScript</h2>
+        <h2 class="content-head is-center shift-up-24">explorations in JavaScript</h2>
 
         <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
@@ -47,25 +47,23 @@
                 <h3 class="content-subhead">
                     BootMap
                 </h3>
-                <p>
-                    Find Dev Bootcamp humans around the world.
-                </p>
+                <p>Find Dev Bootcamp humans around the world.</p>
+                <a href="https://github.com/katherineimogene/BootMap"><img  class="screenshot" src="img/american_boots.png" alt="BootMap screenshot"></a>
+
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
                 <h3 class="content-subhead">
                     Angular Pokedexx
                 </h3>
-                <p>
-                    An enthusiastic foray into AngularJS.
-                </p>
+                <p>An enthusiastic foray into AngularJS.</p><br>
+                <a href="https://github.com/katherineimogene/pokeangular"><img  class="screenshot" src="img/pokedexx.png" alt="pokedexx screenshot"></a>
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
                 <h3 class="content-subhead">
                     Mehitabel Racer
                 </h3>
-                <p>
-                   'Typeracer' in vanilla JavaScript.
-               </p>
+               <p>'Typeracer' in vanilla JavaScript.</p><br>
+                <a href="https://github.com/katherineimogene/mehitabel-racer"><img class="screenshot" src="img/mehitabel.png" alt="typeracer screenshot"></a>
            </div>
            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
             <h3 class="content-subhead">
@@ -74,12 +72,13 @@
             <p>
                Exercise: implementing a drag and drop.
            </p>
+           <a href="https://github.com/katherineimogene/thats-a-nice-drag-n-drop"><img  class="screenshot" src="img/drag_drop_screenshot.png" alt="grocery list code"></a>
        </div>
    </div>
 </div>
 
 <div class="content ribbon">
-    <h2 class="content-head is-center">federal reserve board of governors</h2>
+    <h2 class="content-head is-center shift-up-24">federal reserve board of governors</h2>
 
     <div class="pure-g">
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
@@ -114,7 +113,7 @@
 
 
 <div class="content">
-    <h2 class="screamer content-head is-center">Screamers</h2>
+    <h2 class="content-head is-center shift-up-24">Screamers</h2>
     <p>I started making these clothe mache creatures in high school, and they continue to be one of my silliest and most rewarding hobbies. I start with newspaper, masking tape, and vague idea of what I'd like to create. These are figures of my imagination, and I love the freedom that this brings. Also monsters are funny. </p>
 
     <div class="pure-g screamer-strip">
