--- a/home.html
+++ b/home.html
@@ -47,7 +47,7 @@
                 <h3 class="content-subhead">
                     BootMap
                 </h3>
-                <p>Find Dev Bootcamp humans around the world.</p>
+                <p>Find Dev Bootcamp humans around the world</p>
                 <a href="https://github.com/katherineimogene/BootMap"><img  class="screenshot" src="img/american_boots.png" alt="BootMap screenshot"></a>
 
             </div>
@@ -55,14 +55,14 @@
                 <h3 class="content-subhead">
                     Angular Pokedexx
                 </h3>
-                <p>An enthusiastic foray into AngularJS.</p><br>
+                <p>An enthusiastic foray into AngularJS</p>
                 <a href="https://github.com/katherineimogene/pokeangular"><img  class="screenshot" src="img/pokedexx.png" alt="pokedexx screenshot"></a>
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
                 <h3 class="content-subhead">
                     Mehitabel Racer
                 </h3>
-               <p>'Typeracer' in vanilla JavaScript.</p><br>
+               <p>'Typeracer' in vanilla JavaScript</p><br>
                 <a href="https://github.com/katherineimogene/mehitabel-racer"><img class="screenshot" src="img/mehitabel.png" alt="typeracer screenshot"></a>
            </div>
            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
@@ -70,7 +70,7 @@
                 That's a nice drag-n-drop
             </h3>
             <p>
-               Exercise: implementing a drag and drop.
+               Exercise: implementing a drag and drop
            </p>
            <a href="https://github.com/katherineimogene/thats-a-nice-drag-n-drop"><img  class="screenshot" src="img/drag_drop_screenshot.png" alt="grocery list code"></a>
        </div>
@@ -87,23 +87,26 @@
                 Project Manager
             </h3>
             <p>
-                Economist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom ShakalakakaaEconomist Recruiting Boom Shakalakakaa
+            Managed seven-person team through development of major web application to support Economist Recruiting for the entire Federal Reserve Board.
             </p>
+            <a href="docs/economist_recruiting_system_documentation.pdf">Economist Recruiting System Documentation</a>
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
             <h3 class="content-subhead">
                 Rails Developer
             </h3>
             <p>
-                Example, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for PapersExample, Calls for Papers
+                Developed web applications in Ruby on Rails to support internal operations of the Division of Research and Statistics.
             </p>
+            <p class="calls"><a href="docs/fed_sample_calls_for_papers.pdf">Sample Production Application: Calls for Papers</a></p>
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
             <h3 class="content-subhead">
                 Economic Research and Policy Support
             </h3>
+            <p>Produced charts and memos for financial briefings to the Governors of the Federal Reserve System.</p>
             <p>
-                Household and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate FinanceHousehold and Real Estate Finance
+            Compiled and published datasheets and forecasts for Federal Open Market Committee meetings.
             </p>
         </div>
 
@@ -114,7 +117,7 @@
 
 <div class="content">
     <h2 class="content-head is-center shift-up-24">Screamers</h2>
-    <p>I started making these clothe mache creatures in high school, and they continue to be one of my silliest and most rewarding hobbies. I start with newspaper, masking tape, and vague idea of what I'd like to create. These are figures of my imagination, and I love the freedom that this brings. Also monsters are funny. </p>
+    <p class="screamer-text">These are figures of my imagination, and I love the freedom that this brings. Also monsters are funny. </p>
 
     <div class="pure-g screamer-strip">
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
@@ -148,11 +151,15 @@
         <img class="close-up"  src="img/foot_closeup.jpg" alt="dragon foot closeup">
     </div>
 </div>
+</div>
+
+<div class="content ribbon">
+    <a href="docs/katherine_imogene_hayden_resume.pdf"><h2 class="content-head is-center shift-up-24 resume">Download my awesome resume <i class="fa fa-download fa-lg"></i></h2></a>
 
 </div>
 
 <div class="footer l-box is-center">
-    i'd love to hear from you.
+   i'd love to hear from you.
 </div>
 
 </div>
