--- a/home.html
+++ b/home.html
@@ -56,6 +56,7 @@
                     Angular Pokedexx
                 </h3>
                 <p>An enthusiastic foray into AngularJS</p>
+                <br>
                 <a href="https://github.com/katherineimogene/pokeangular"><img  class="screenshot" src="img/pokedexx.png" alt="pokedexx screenshot"></a>
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
@@ -98,7 +99,7 @@
             <p>
                 Developed web applications in Ruby on Rails to support internal operations of the Division of Research and Statistics.
             </p>
-            <p class="calls"><a href="docs/fed_sample_calls_for_papers.pdf">Sample Production Application: Calls for Papers</a></p>
+            <p><a href="docs/fed_sample_calls_for_papers.pdf">Sample Production Application: Calls for Papers</a></p>
         </div>
         <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
             <h3 class="content-subhead">
