adds links to project headers and footer text

--- a/index.html
+++ b/index.html
@@ -43,33 +43,24 @@
 
         <div class="pure-g">
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-
-                <h3 class="content-subhead">
-                    BootMap
-                </h3>
+                <a href="https://github.com/katherineimogene/BootMap"><h3 class="content-subhead js">BootMap</h3></a>
                 <p>Find Dev Bootcamp humans around the world</p>
                 <a href="https://github.com/katherineimogene/BootMap"><img  class="screenshot" src="img/american_boots.png" alt="BootMap screenshot"></a>
 
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <h3 class="content-subhead">
-                    Angular Pokedexx
-                </h3>
+                <a href="https://github.com/katherineimogene/pokeangular"><h3 class="content-subhead js">Angular Pokedexx</h3></a>
                 <p>An enthusiastic foray into AngularJS</p>
                 <br>
                 <a href="https://github.com/katherineimogene/pokeangular"><img  class="screenshot" src="img/pokedexx.png" alt="pokedexx screenshot"></a>
             </div>
             <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <h3 class="content-subhead">
-                    Mehitabel Racer
-                </h3>
+                <a href="https://github.com/katherineimogene/mehitabel-racer"><h3 class="content-subhead js">Mehitabel Racer</h3></a>
                <p>'Typeracer' in vanilla JavaScript</p><br>
                 <a href="https://github.com/katherineimogene/mehitabel-racer"><img class="screenshot" src="img/mehitabel.png" alt="typeracer screenshot"></a>
            </div>
            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-            <h3 class="content-subhead">
-                That's a nice drag-n-drop
-            </h3>
+            <a href="https://github.com/katherineimogene/thats-a-nice-drag-n-drop"><h3 class="content-subhead js">That's a nice drag-n-drop</h3></a>
             <p>
                Exercise: implementing a drag and drop
            </p>
@@ -160,7 +151,7 @@
 </div>
 
 <div class="footer l-box is-center">
-   i'd love to hear from you.
+    <a class="footer" href="mailto:katherineimogene@gmail.com?subject=toujours gai">i'd love to hear from you.</a>
 </div>
 
 </div>
