gut katherineimogene.com: removes old code samples, Fed work, Screamers, and includes contact details and resume only.

--- a/index.html
+++ b/index.html
@@ -1,162 +1,46 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="katherine imogene hayden. creator. web developer. javascript junkie. ">
 
     <title>katherine imogene hayden</title>
 
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.4.2/pure-min.css">
-    <link rel="stylesheet" href="pure-marketing.css">
     <link rel="stylesheet" href="kih.css">
 
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
 
-</head>
-<body>
+  </head>
+  <body>
 
-
-    <div class="splash-container">
-        <div class="splash">
-            <h1 class="splash-head">katherine imogene hayden</h1>
-            <p class="splash-subhead">
-                creative. clever. web developer.
-            </p>
-            <ul>
-                <li><a href="https://github.com/katherineimogene" target='_blank'><i i class='fa fa-github fa-2x'></i></a></li>
-                <li><a href="https://www.linkedin.com/in/katherineimogene" target='_blank'><i i class='fa fa-linkedin fa-2x'></i></a></li>
-                <li><a href="http://katherineimogene.tumblr.com" target='_blank'><i i class='fa fa-tumblr fa-2x'></i></a></li>
-                <li><a href="http://instagram.com/katherineimogene" target='_blank'><i i class='fa fa-instagram fa-2x'></i></a></li>
-                <li><a href="https://www.facebook.com/katherine.hayden.528" target='_blank'><i i class='fa fa-facebook fa-2x'></i></a></li>
-                <li><a href="https://plus.google.com/+KatherineHayden0803" target='_blank'><i i class='fa fa-google-plus fa-2x'></i></a></li>
-                <li><a href="http://twitter.com/kihayden" target='_blank'><i i class='fa fa-twitter fa-2x'></i></a></li>
-                <li><a href="mailto:katherineimogene@gmail.com?subject=toujours gai"><i i class='fa fa-envelope fa-2x'></i></a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="content-wrapper">
-
-     <div class="content">
-        <h2 class="content-head is-center shift-up-24">explorations in JavaScript</h2>
-
-        <div class="pure-g">
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <a href="https://github.com/katherineimogene/BootMap"><h3 class="content-subhead js">BootMap</h3></a>
-                <p>Find Dev Bootcamp humans around the world</p>
-                <a href="https://github.com/katherineimogene/BootMap"><img  class="screenshot" src="img/american_boots.png" alt="BootMap screenshot"></a>
-
-            </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <a href="https://github.com/katherineimogene/pokeangular"><h3 class="content-subhead js">Angular Pokedexx</h3></a>
-                <p>An enthusiastic foray into AngularJS</p>
-                <br>
-                <a href="https://github.com/katherineimogene/pokeangular"><img  class="screenshot" src="img/pokedexx.png" alt="pokedexx screenshot"></a>
-            </div>
-            <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-                <a href="https://github.com/katherineimogene/mehitabel-racer"><h3 class="content-subhead js">Mehitabel Racer</h3></a>
-               <p>'Typeracer' in vanilla JavaScript</p><br>
-                <a href="https://github.com/katherineimogene/mehitabel-racer"><img class="screenshot" src="img/mehitabel.png" alt="typeracer screenshot"></a>
-           </div>
-           <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-4">
-            <a href="https://github.com/katherineimogene/thats-a-nice-drag-n-drop"><h3 class="content-subhead js">That's a nice drag-n-drop</h3></a>
-            <p>
-               Exercise: implementing a drag and drop
-           </p>
-           <a href="https://github.com/katherineimogene/thats-a-nice-drag-n-drop"><img  class="screenshot" src="img/drag_drop_screenshot.png" alt="grocery list code"></a>
-       </div>
-   </div>
-</div>
-
-<div class="content ribbon">
-    <h2 class="content-head is-center shift-up-24">federal reserve board of governors</h2>
-
-    <div class="pure-g">
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-
-            <h3 class="content-subhead">
-                Project Manager
-            </h3>
-            <p>
-            Managed seven-person team through development of major web application to support Economist Recruiting for the entire Federal Reserve Board.
-            </p>
-            <a href="docs/economist_recruiting_system_documentation.pdf">Economist Recruiting System Documentation</a>
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            <h3 class="content-subhead">
-                Rails Developer
-            </h3>
-            <p>
-                Developed web applications in Ruby on Rails to support internal operations of the Division of Research and Statistics.
-            </p>
-            <p><a href="docs/fed_sample_calls_for_papers.pdf">Sample Production Application: Calls for Papers</a></p>
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            <h3 class="content-subhead">
-                Economic Research and Policy Support
-            </h3>
-            <p>Produced charts and memos for financial briefings to the Governors of the Federal Reserve System.</p>
-            <p>
-            Compiled and published datasheets and forecasts for Federal Open Market Committee meetings.
-            </p>
-        </div>
-
-    </div>
-</div>
-
-
-
-<div class="content">
-    <h2 class="content-head is-center shift-up-24">Screamers</h2>
-    <p class="screamer-text">These are figures of my imagination, and I love the freedom that this brings. Also monsters are funny. </p>
-
-    <div class="pure-g screamer-strip">
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            <img class="showcase" src="img/fence_fairy.jpg">
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            <img class="showcase" src="img/birds_eye_view.jpg">
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-3">
-            <img class="showcase" src="img/angler_fish.jpg">
-        </div>
-    </div>
-
-    <div class="pure-g screamer-strip">
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            <img class="close-up" src="img/eye_closeup.jpg" alt="dragon eye closeup">
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-            <img class="close-up"  src="img/scale_closeup.jpg" alt="dragon scale closeup">
-        </div>
-        <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-           <img class="close-up"  src="img/tail_closeup.jpg" alt="dragon tail closeup">
-       </div>
-       <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-           <img class="close-up"  src="img/arm_closeup.jpg" alt="dragon arm closeup">
-       </div>
-       <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-          <img class="close-up"  src="img/backside_closeup.jpg" alt="dragon backside closeup">
+    <div class="content">
+      <div class="intro">
+        <h1>katherine imogene hayden</h1>
+        <p>
+          creative. clever. web developer.
+        </p>
       </div>
-      <div class="l-box pure-u-1 pure-u-med-1-2 pure-u-lrg-1-6">
-        <img class="close-up"  src="img/foot_closeup.jpg" alt="dragon foot closeup">
+      <div class="connect">
+        <ul>
+          <li><a href="https://github.com/katherineimogene" target='_blank'><i i class='fa fa-github fa-2x'></i></a></li>
+          <li><a href="https://www.linkedin.com/in/katherineimogene" target='_blank'><i i class='fa fa-linkedin fa-2x'></i></a></li>
+          <li><a href="http://instagram.com/katherineimogene" target='_blank'><i i class='fa fa-instagram fa-2x'></i></a></li>
+          <li><a href="mailto:katherineimogene@gmail.com?subject=toujours gai"><i i class='fa fa-envelope fa-2x'></i></a></li>
+        </ul>
+      </div>
+      <div class="resume">
+        <a href="docs/katherine_imogene_hayden_resume.pdf">
+          <h2 class="uppercase">Download my resume <i class="fa fa-download fa-lg"></i></h2>
+        </a>
+      </div>
+
+      <div class="contact">
+        <a href="mailto:katherineimogene@gmail.com?subject=toujours gai">let's create something together.</a>
+      </div>
     </div>
-</div>
-</div>
 
-<div class="content ribbon">
-    <a href="docs/katherine_imogene_hayden_resume.pdf"><h2 class="content-head is-center shift-up-24 resume">Download my awesome resume <i class="fa fa-download fa-lg"></i></h2></a>
-
-</div>
-
-<div class="footer l-box is-center">
-    <a class="footer" href="mailto:katherineimogene@gmail.com?subject=toujours gai">i'd love to hear from you.</a>
-</div>
-
-</div>
-
-</body>
+  </body>
 </html>
 
 
